<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/general">
        <Preference
            app:key="gadget_path"
            app:title="@string/export_path" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/influx">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="sync_influx"
            app:summary="Sync to InfluxDB server"
            app:title="@string/sync" />

        <EditTextPreference
            app:dependency="sync_influx"
            app:key="server_url"
            app:title="@string/server_url"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="sync_influx"
            app:key="username"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="sync_influx"
            app:key="password"
            app:title="@string/password" />
    </PreferenceCategory>


</androidx.preference.PreferenceScreen>
